Bug 1144632 - fix big-endian Skia builds. r=rhunt

MozReview-Commit-ID: JQivGBE45qy